# Repldex

./: .env.example  .eslintrc.cjs  .flake8  .gitattributes  .gitignore  .gitpod.yml  .prettierrc  .replit  .style.yapf  .swcrc  API.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  admins.txt  api.py  baseurl.txt  betterbot.py  checklist.txt  clean.sh  commands.py  config.example  config.json  config.py  database.py  discordbot.py  editors.txt  generate.cjs  images.py  main.py  main.sh  package-lock.json  package.json  poetry.toml  pyproject.toml  replit.nix  requirements.txt  server.py  svelte.config.js  (+4 more)
.config/configstore/: update-notifier-npm.json
.github/workflows/: ci.yml  codeql-analysis.yml  python-app.yml
.upm/: store.json
android-app/: local.properties  settings.gradle
android-app/app/: build.gradle
config/: admins.txt  config.json  editors.txt  entry_approval.txt  reporters.txt  subs.json
config/other/: editors_removed.txt
database/repldex/: entries.json
discordpytest/: __init__.py
hooks/entry/: [slug].svelte
repldex/: utils.py
repldex/backend/: api.py  database.py  images.py  mockmotor.py  typings.py  website.py
repldex/config/: __init__.py  admins.txt  config.json  devs.txt  editors.txt  entry_approval.txt  featured.txt
repldex/discordbot/: bot.py  commands.py
src/: AtkinsonHyperlegible.css  api.py  app.css  app.d.ts  app.html  commands.py  configureEnv.ts  database.py  discordbot.py  images.py  main.py  server.py  utils.py
src/config/: __init__.py
src/hooks/: index.ts
src/lib/: Diff.svelte  DiscordLoginButton.svelte  EntryPreview.svelte  Head.svelte  Labelled.svelte  MarkdownEditor.svelte  RevertButton.svelte  SearchBar.svelte  TextInput.svelte  User.svelte  auth.ts  config.ts  database.ts  markdown.ts  perms.ts  revert.ts  utils.ts
src/routes/: __error.svelte  __layout.svelte  edit.svelte  login.ts  (+3 more)
static/: highlight.css  highlight.js  icon.jxl  main.css  quill.css
templates/: base.html  edit.html  entry.html  history.html  index.html  mod_panel.html  news.html
tests/: __init__.py  test_bot.py
(+52 files in other folders)
