[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
Jinja2 = "^2.10"
aiohttp = "^3.6"
async-lru = "^1.0"
bs4 = "^0.0.1"
"discord.py" = "^1.2"
dnspython = "^1.16"
flask = "^1.1"
jellyfish = "^0.7.2"
motor = "^2.1"
python = "^3.8"
timeago = "^1.0"
[tool.poetry.dev-dependencies]
