[tool.poetry]
name = "repldex"
version = "0.1.0"
description = ""
authors = ["mat <replit@matdoes.dev>","prussia","coderman51","minx"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
beautifulsoup4 = "^4.9.3"
jellyfish = "^0.8.2"
jinja2 = "^2.11.2"
motor = "^2.1.0"
timeago = "^1.0.14"
aiohttp = "^3.6.2"
aiodns = "^2.0.0"
cchardet = "^2.1.7"
pymongo = {version = ">=3.11<4", extras = ["srv"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
flake8-tabs = "^2.2.2"
yapf = "^0.30.0"
python-dotenv = "^0.15.0"

[tool.black]
line-length=127
target-version = ['py38']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"